@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.8.5
+ - Prevent SDL device from dropping OpenGL resources on Win32 when setResizable was called with OpenGL driver. Thanks @ kas1e for reporting (http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=52083&start=0)
+   And thanks to http://www.bytehazard.com/articles/sdlres.html for the workaround.
  - Fix isWindowActive when using SDL device. Before it was only active when the mouse was over the window. Thanks @ kas1e for reporting (http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=52083&start=0)
  - Fix SViewFrustum::clipLine. Was before clipping at wrong points (inverse places along lines).
  - Fix compilation on OSX and prevent capturing mouse cursor when Window is not on top (Patch #319)
